feat(narrative): rewrite EventSpec, EventSpecParser, EventEngine, view DTOs to match real XML format